# plume

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plume_apple.h  plume_apple.mm  plume_d3d12.cpp  plume_d3d12.h  plume_metal.cpp  plume_metal.h  plume_render_interface.h  plume_render_interface_types.h  plume_vulkan.cpp  plume_vulkan.h
.github/workflows/: validate.yml
examples/: CMakeLists.txt  main.cpp
examples/cmake/: ShaderCompilation.cmake
examples/shaders/: triangle.frag.hlsl  triangle.frag.metal  triangle.vert.hlsl  triangle.vert.metal
examples/tools/: CMakeLists.txt
examples/tools/file_to_c/: CMakeLists.txt  file_to_c.cpp
